[package]
name = "yt-music-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.13", features= ["json"]}
regex = "1.7.0"
serde_json = "1.0.88"
tokio = {version="1.22.0",features = ["full"]}
youtube_dl = "0.7.0"
serde = "1.0.147"
